<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:background="#5DFF00"
        android:contentDescription="@string/album_art"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_audiotrack_24" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="6dp"
        android:text="@string/song_name"
        android:textColor="#5DFF00"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/album_art"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:text="@string/artist_name"
        android:textColor="#5DFF00"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/album_art"
        app:layout_constraintTop_toBottomOf="@+id/song_name" />

</androidx.constraintlayout.widget.ConstraintLayout>